--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -75,6 +75,9 @@ input {
 
 .leaflet-popup-content {
 	margin: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .loading {
